fix spacing

--- a/src/modules/common/components/markdown-renderer/markdown-renderer.styles.less
+++ b/src/modules/common/components/markdown-renderer/markdown-renderer.styles.less
@@ -1,6 +1,20 @@
 @import (reference) '~assets/styles/shared';
 
-.MarkdownRender {
+.MarkdownRenderer {
   white-space: pre-wrap;  	
 }
 
+.MarkdownRenderer ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-end: 1em;
+  margin-block-start: 1em;
+  margin-inline-end: 0;
+  margin-inline-start: 0;
+  padding-inline-start: 40px;
+}
+
+.MarkdownRenderer ol {
+	margin-block-start: 1em;
+    margin-block-end: 1em;
+}
