--- a/src/modules/market/components/market-header/market-header.styles.less
+++ b/src/modules/market/components/market-header/market-header.styles.less
@@ -21,6 +21,7 @@
   text-transform: none;
   transition: max-height @animation-speed-normal @animation-default-type;
   white-space: pre-wrap;
+  margin-top: -10px;
 
   > p {
     margin-top: 0;
